# embedding

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  SPEC.md  TODO.md  build.rs  build.sh  demo.rs  test_cli.rs
.github/workflows/: ci.yml
benches/: embedding_bench.rs
data/benchmarks/: scws.tsv
examples/: advanced.rs  basic.rs  pretrained.rs  training_enhancements.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_process_text.rs
scripts/: compare_benchmark.py
src/: backend.rs  benchmark.rs  cli.rs  code.rs  commands.rs  config.rs  evaluation.rs  export.rs  hnsw.rs  lib.rs  main.rs  mmap.rs  model.rs  onnx.proto  pretrained.rs  quantization.rs  search.rs  text.rs  tokenizer.rs  training.rs  transfer.rs  transformer.rs
tests/: integration_test.rs
